--- a/src/components/title-bar/title-bar.html
+++ b/src/components/title-bar/title-bar.html
@@ -85,7 +85,7 @@
         }
 
         .party-btn.party-active svg path {
-            fill: #7b5bf5 !important;
+            fill: #10b981 !important;
         }
 
         .party-indicator {
